Actualizando README y cambios recientes

--- a/scripts/2_Create_base_files.ipynb
+++ b/scripts/2_Create_base_files.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e580e321",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo 'base.csv' creado correctamente.\n"
+      "El archivo 'base.csv' ya existe.\n"
      ]
     }
    ],
